2007-01-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/bbox.py : draws bounding boxes of the objects in the
	active layer into a new layer. Helps analyzing the font size problems.

	* acinclude.m4 : deduce py_config_dir from py_prefix, helps GARNOME
	and seems not to break anything (tested on Fedora and Gentoo)
	Joseph Sacco, bug #338368

	* plug-ins/python/pydia-property.c : finally implemented 
	getters/setters for LengthProperty and FontsizeProperty. (We really
	should take g_warning more serious, this one was
	WARNING **: No handler for type 'length')

	* plug-ins/xslt/xslt.c : don't use g_warning but message_error for 
	"No valid configuration files found for the XSLT plugin, not loading."

2007-01-05  Hans Breuer  <hans@breuer.org>

	* objects/standard/line.c : fix typo in save_arrow(), patch from
	Michael Duelli closing bug #393201

	* app/dia-win-remote.c app/paginate_gdiprint.cpp app/win32print.c
	  lib/dia_dirs.c lib/font.c plug-ins/wmf/wmf.cpp : 
	#define WIN32_MEAN_AND_LEAN before windows.h inclusion where ever 
	possible to reduce namespace clashes

2007-01-03  Hans Breuer  <hans@breuer.org>

	* lib/persistence.c : before restoring window positions check if
	they are still in valid range. Fixes bug #354266

	* app/interface.c : refined the zooms-list drop-down to include
	800%, stay symmetric and not have more than seven entries. 
	Fixes bug #328596

	* lib/makefile.msc : enable strict checking again 
	(-FImsvc_recommended_pragmas.h) to enforce e.g. matching pointers
	at compile time
	* lib/textline.h : RenderCacheFreeFunc is only taking a pointer,
	not a pointer to a pointer and we dont need a pointer to the 
	function pointer in the struct
	
	* objects/UML/constraint.c objects/UML/implements.c 
	  objects/UML/message.c objects/Jackson/phenomenon.c
	  objects/KAOS/metaandorrel.c : move_handle() method needs to call 
	connection_adjust_for_autogap() after connection_move_handle() because 