@@ -9,16 +9,25 @@ pkgdata_DATA = dia_logo.png
 pixmapdir = $(gnomedatadir)/pixmaps
 pixmap_DATA = dia_gnome_icon.png dia-diagram.png
 
-Applicationsdir = $(gnomedatadir)/applications
-applications_in_files = dia.desktop.in
-Applications_DATA = $(applications_in_files:.desktop.in=.desktop)
-@INTLTOOL_DESKTOP_RULE@
+desktop_in_files = dia.desktop.in.in
+desktop_files = $(desktop_in_files:.desktop.in.in=.desktop)
+
+applicationsdir = $(DESKTOP_DATADIR)/applications
+applications_DATA = $(desktop_files)
+
 
 dia.keys: $(srcdir)/dia.keys.in Makefile
 	sed -e 's^\@icondir\@^$(pixmapdir)^g' $(srcdir)/dia.keys.in > dia.keys.tmp \
 	&& mv dia.keys.tmp dia.keys
 
-CLEANFILES = core-translation-report dia.keys dia.desktop
+CLEANFILES = core-translation-report dia.keys dia.desktop dia.desktop.in
+
+DISTCLEANFILES = $(desktop_files)
+
+
+dia.desktop: dia.desktop.in $(wildcard $(top_srcdir)/po/*.po)
+	$(INTLTOOL_MERGE) $(top_srcdir)/po $< $(@) -d -u -c $(top_builddir)/po/.intltool-merge-cachemake
+
 
 distclean-local:
 	rm -f dia.keys
@@ -60,7 +69,7 @@ distuninstallcheck_listfiles = find . -type f -print | grep -v '^\./var/scrollke
 #	@:
 
 EXTRA_DIST = dia.xpm dia_gnome_icon.png dia_gnome_menu_icon.png \
-	dia.desktop.in KNOWN_BUGS $(pkgdata_DATA) \
+	dia.desktop.in.in KNOWN_BUGS $(pkgdata_DATA) \
 	dia-diagram.png dia.mime dia.keys.in \
 	po-checktrans.py po-checktrans \
 	intltool-extract.in intltool-merge.in intltool-update.in \
